--- a/EnterpirseCheckpoint/Views/MainView.axaml
+++ b/EnterpirseCheckpoint/Views/MainView.axaml
@@ -8,15 +8,7 @@
              d:DesignWidth="800"
              x:DataType="vm:MainViewModel"
              mc:Ignorable="d">
-    <Design.DataContext>
-        <!--
-            This only sets the DataContext for the previewer in an IDE,
-            to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs)
-        -->
-        <vm:MainViewModel />
-    </Design.DataContext>
-
-    <TextBlock HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               Text="{Binding Greeting}" />
+    <ContentControl Content="{Binding ViewModel}"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center" />
 </UserControl>
