--- a/EnterpirseCheckpoint/Views/MainView.axaml
+++ b/EnterpirseCheckpoint/Views/MainView.axaml
@@ -8,7 +8,5 @@
              d:DesignWidth="800"
              x:DataType="vm:MainViewModel"
              mc:Ignorable="d">
-    <ContentControl Content="{Binding ViewModel}"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center" />
+    <ContentControl Content="{Binding ViewModel}" />
 </UserControl>
