--- a/EnterpirseCheckpoint/Views/LoginView.axaml
+++ b/EnterpirseCheckpoint/Views/LoginView.axaml
@@ -10,14 +10,17 @@
              mc:Ignorable="d">
     <StackPanel Width="300"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center">
+                VerticalAlignment="Center"
+                Spacing="10">
         <TextBox Text="{Binding Login}" />
-        <TextBox Margin="0,10,0,0"
-                 PasswordChar="*"
-                 Text="{Binding Password}" />
+		<StackPanel Orientation="Horizontal">
+			<TextBox PasswordChar="*"
+					 RevealPassword="True"
+					 Text="{Binding Password}" 
+					 />
+		</StackPanel>
         <Button Content="Login"
                 Command="{Binding LoginCommand}"
-                Margin="0,10,0,0"
                 HorizontalAlignment="Center" />
     </StackPanel>
 </UserControl>
