--- a/EnterpirseCheckpoint/Views/ChangeScheduleView.axaml
+++ b/EnterpirseCheckpoint/Views/ChangeScheduleView.axaml
@@ -1,17 +1,51 @@
 <UserControl x:Class="EnterpirseCheckpoint.Views.ChangeScheduleView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="using:EnterpirseCheckpoint.Converters"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:EnterpirseCheckpoint.ViewModels"
              d:DesignHeight="450"
              d:DesignWidth="800"
              x:DataType="vm:ChangeScheduleViewModel"
-             mc:Ignorable="d"
-			 Loaded="UserControl_Loaded">
+             Loaded="UserControl_Loaded"
+             mc:Ignorable="d">
+    <UserControl.Resources>
+        <converters:ComboBoxWeekDayConverter x:Key="WeekDayConverter" />
+    </UserControl.Resources>
     <StackPanel HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Spacing="50">
+        <StackPanel VerticalAlignment="Center"
+                    Orientation="Horizontal"
+                    Spacing="10">
+            <TextBlock VerticalAlignment="Center">Start week day:</TextBlock>
+            <ComboBox VerticalAlignment="Center"
+                      SelectedValue="{Binding StartWeekDay, Converter={StaticResource WeekDayConverter}}">
+                <ComboBoxItem>Sunday</ComboBoxItem>
+                <ComboBoxItem>Monday</ComboBoxItem>
+                <ComboBoxItem>Tuesday</ComboBoxItem>
+                <ComboBoxItem>Wednesday</ComboBoxItem>
+                <ComboBoxItem>Thursday</ComboBoxItem>
+                <ComboBoxItem>Friday</ComboBoxItem>
+                <ComboBoxItem>Saturday</ComboBoxItem>
+            </ComboBox>
+        </StackPanel>
+        <StackPanel VerticalAlignment="Center"
+                    Orientation="Horizontal"
+                    Spacing="10">
+            <TextBlock VerticalAlignment="Center">End week day:</TextBlock>
+            <ComboBox VerticalAlignment="Center"
+                      SelectedValue="{Binding EndWeekDay, Converter={StaticResource WeekDayConverter}}">
+                <ComboBoxItem>Sunday</ComboBoxItem>
+                <ComboBoxItem>Monday</ComboBoxItem>
+                <ComboBoxItem>Tuesday</ComboBoxItem>
+                <ComboBoxItem>Wednesday</ComboBoxItem>
+                <ComboBoxItem>Thursday</ComboBoxItem>
+                <ComboBoxItem>Friday</ComboBoxItem>
+                <ComboBoxItem>Saturday</ComboBoxItem>
+            </ComboBox>
+        </StackPanel>
         <StackPanel Height="20"
                     Orientation="Horizontal"
                     Spacing="10">
