--- a/EnterpirseCheckpoint/Views/ChangeScheduleView.axaml
+++ b/EnterpirseCheckpoint/Views/ChangeScheduleView.axaml
@@ -69,5 +69,8 @@
         <Button Content="Add schedule"
                 Command="{Binding AddScheduleCommand}"
                 HorizontalAlignment="Center" />
+        <Button Content="Go Back"
+                Command="{Binding GoBackCommand}"
+                HorizontalAlignment="Center" />
     </StackPanel>
 </UserControl>
